--- a/AppComponents/app/src/main/AndroidManifest.xml
+++ b/AppComponents/app/src/main/AndroidManifest.xml
@@ -9,11 +9,19 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
-            <intent-filter>
+           <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity android:name=".MainServiceActivity">
+            <!-- <intent-filter>
+               <action android:name="android.intent.action.MAIN" />
+
+               <category android:name="android.intent.category.LAUNCHER" />
+           </intent-filter>-->
         </activity>
 
         <receiver android:name=".broadcastreceiver.NetworkBroadcastReceiver">
@@ -21,6 +29,12 @@
                 <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
             </intent-filter>
         </receiver>
+
+        <service
+            android:name=".services.SoundService"
+            android:enabled="true" />
+
+
     </application>
 
 </manifest>
