--- a/FormSample/app/src/main/AndroidManifest.xml
+++ b/FormSample/app/src/main/AndroidManifest.xml
@@ -15,6 +15,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".BasicEventsActivity"/>
+        <activity android:name=".FormularioActivity"/>
+        <activity android:name=".ItemsEventsActivity"/>
+        <activity android:name=".KeyboardEventsActivity"/>
     </application>
 
 </manifest>
