ejemplo de listas y adapters

--- a/GMDAppTemplate/app/src/main/AndroidManifest.xml
+++ b/GMDAppTemplate/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.gmd.lessons">
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.WRITE_CONTACTS" />
 
     <application
         android:allowBackup="true"
@@ -15,6 +17,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".baseadapter.BaseAdapterActivity" />
+        <activity android:name=".viewholder.ViewHolderActivity" />
+        <activity android:name=".arrayAdapter.ArrayAdapterActivity" />
+        <activity android:name=".cursoradapter.CursorAdapterActivity" />
+        <activity android:name=".simpleadapter.SimpleAdapterActivity" />
+        <activity android:name=".spinner.SpinnerActivity" />
     </application>
 
 </manifest>
