--- a/Fragments/app/src/main/AndroidManifest.xml
+++ b/Fragments/app/src/main/AndroidManifest.xml
@@ -8,13 +8,20 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".TabFragmentActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".CardsActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".ColorActivity" android:screenOrientation="landscape"/>
+        <activity android:name=".ContactsActivity" android:screenOrientation="landscape"/>
+        <activity android:name=".DynamicFragmentActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".MessageActivity" android:screenOrientation="landscape"/>
     </application>
 
 </manifest>
