--- a/GMDAppTemplate/app/build.gradle
+++ b/GMDAppTemplate/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     compile 'com.android.support:design:23.4.0'
     compile 'com.android.support:cardview-v7:23.4.0'
     compile 'com.android.support:recyclerview-v7:23.4.0'
+    compile 'com.android.support:palette-v7:23.0.0'
 }
