--- a/GMDAppTemplate/app/src/main/AndroidManifest.xml
+++ b/GMDAppTemplate/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".OtherActivity"></activity>
+        <activity android:name=".OtherActivity" />
+        <activity android:name=".PaletteActivity"></activity>
     </application>
 
 </manifest>
